--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,24 @@ if(NOT WIN32)
     add_compile_options(-Wno-invalid-noreturn -Wno-pragma-pack -Wno-int-to-pointer-cast -fPIC -fms-extensions -DBIT64 -DPAL_STDCPP_COMPAT -DPLATFORM_UNIX -DHOST_64BIT -DHOST_AMD64 -std=c++17 -stdlib=libc++ -gdwarf-4)
     add_link_options(--no-undefined -pthread)
 
-    include_directories($ENV{CORECLR_PATH}/pal/inc/rt $ENV{CORECLR_PATH}/pal/inc $ENV{CORECLR_PATH}/inc)
+    include_directories(src/linux)
 endif(NOT WIN32)
 
 if (WIN32)
     set(BASE_SOURCES src/windows/CorProfiler.def)
     add_compile_options(/std:c++17)
+
+    include_directories(src/windows)
 endif(WIN32)
-include_directories($CORECLR_BIN/inc $ENV{CORECLR_PATH}/pal/prebuilt/inc)
+
+include_directories(src)
+include_directories(src/sdk)
 
 set(SOURCES
     ${BASE_SOURCES}
+    src/guids.cpp
     src/ClassFactory.cpp
     src/CorProfiler.cpp
-    src/dllmain.cpp
-    $ENV{CORECLR_PATH}/pal/prebuilt/idl/corprof_i.cpp)
+    src/dllmain.cpp)
 
 add_library(CorProfiler SHARED ${SOURCES})
